syscontainers: track installed files with systemd-tmpfiles
Allow images to have an additional /exports/tmpfiles.template file that
specifies what directories/files must be present on the host.

Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/tests/test-images/Dockerfile.system
+++ b/tests/test-images/Dockerfile.system
@@ -6,4 +6,4 @@ LABEL "Name"="atomic-test-system"
 ADD run.sh greet.sh /usr/bin/
 
 # Export the files used for the system container
-ADD manifest.json service.template config.json.template /exports/
+ADD tmpfiles.template manifest.json service.template config.json.template /exports/
