syscontainers: generate an UUID at installation time
Generate an UUID at installation time for the system container.

It can be used as $container_uuid environment variable for containers using systemd.

   "env": [
   ...
          "container_uuid=$UUID"
   ...
   ],

oci-systemd-hook related change:

https://github.com/projectatomic/oci-systemd-hook/pull/36

Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/tests/test-images/system-container-files/config.json.template
+++ b/tests/test-images/system-container-files/config.json.template
@@ -16,6 +16,8 @@
 		"env": [
 			"PORT=$PORT",
 			"RECEIVER=$RECEIVER",
+			"UUID=$UUID",
+			"NAME=$NAME",
 			"PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
 			"TERM=xterm"
 		],
