tests: test oneshot system containers with values
Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/tests/test-images/system-container-runonce-files/config.json.template
+++ b/tests/test-images/system-container-runonce-files/config.json.template
@@ -16,7 +16,9 @@
 		],
 		"env": [
 			"PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
-			"TERM=xterm"
+			"TERM=xterm",
+			"NAME=$NAME",
+			"RECEIVER=$RECEIVER"
 		],
 		"cwd": "/"
 	},
