syscontainers: fix copy to host of symlinks
copy2 fails when the source file is a broken symlink.  If we are trying
to copy a symlink, read where it points to and create a new symlink.

More information here:
https://github.com/openshift/openshift-ansible/pull/4898#issuecomment-318734884

Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/tests/test-images/Dockerfile.system-hostfs
+++ b/tests/test-images/Dockerfile.system-hostfs
@@ -6,6 +6,7 @@ LABEL "atomic.has_install_files"="yes"
 
 # Add a file that can be handled by the rpm generator
 RUN mkdir -p /exports/hostfs/usr/local/lib
+RUN ln -s /does/not/exist /exports/hostfs/broken-symlink
 ADD message /exports/hostfs/usr/local/lib/secret-message
 ADD message-template /exports/hostfs/usr/local/lib/secret-message-template
 
