syscontainers: create empty directories in the .rpm case
We already do this when copying directly to the host.

Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/tests/test-images/Dockerfile.system-hostfs
+++ b/tests/test-images/Dockerfile.system-hostfs
@@ -5,7 +5,7 @@ LABEL "Name"="atomic-test-system-hostfs"
 LABEL "atomic.has_install_files"="yes"
 
 # Add a file that can be handled by the rpm generator
-RUN mkdir -p /exports/hostfs/usr/local/lib
+RUN mkdir -p /exports/hostfs/usr/local/lib /exports/hostfs/usr/local/placeholder-lib
 RUN ln -s /does/not/exist /exports/hostfs/broken-symlink
 ADD message /exports/hostfs/usr/local/lib/secret-message
 ADD message-template /exports/hostfs/usr/local/lib/secret-message-template
