syscontainers: introduce ALL_PROCESS_CAPABILITIES
it can be used by privileged containers to add all the capabilities
known to the host.  It prevents hard coding the list in the
config.json.template file so that the same image can be used on
different kernel versions where there can be different capabilities
supported.

Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/tests/test-images/system-container-files/config.json.template
+++ b/tests/test-images/system-container-files/config.json.template
@@ -114,11 +114,9 @@
 	],
 	"hooks": {},
 	"linux": {
-		"capabilities": [
-			"CAP_AUDIT_WRITE",
-			"CAP_KILL",
-			"CAP_NET_BIND_SERVICE"
-		],
+	         "capabilities": {
+			"bounding": [${ALL_PROCESS_CAPABILITIES}]
+                },
 		"rlimits": [
 			{
 				"type": "RLIMIT_NOFILE",
